fixed some errors, including nav bar and spacing and alignment of photos

--- a/css/index.css
+++ b/css/index.css
@@ -169,7 +169,7 @@ header nav{
   }
 
   nav a{
-    color black;
+    color: black;
     text-decoration:none;
     letter-spacing:3px;
     padding: 0 2%;
@@ -219,7 +219,10 @@ header nav{
 
 .middle-content .boxes .box:nth-child(10n) {
     background-color: dodgerblue;
+}
 
+
+/* About Starts Here */
 
     .under-about {
         border: 1px dashed black;
@@ -232,13 +235,15 @@ header nav{
     }
     
     .about-block-container {
+        justify-content: space-between;
         display: flex;
-        flex-flow: row wrap;
+        flex-wrap: wrap;
     }
     
     .about-items {
         padding: 3% 3%;
         width: 48%;
+        /* margin: 30% 0 10% 0; */
     }
     
     .about-items-content {
